# ttkv

./: README.md
ttkv_hs/: ttkv.cabal
ttkv_hs/src/: TTKV.hs
ttkv_hs/test/: Main.hs  TTKVSpec.hs
ttkv_py/: flake.nix  ttkv.py  ttkv_spec.py
ttkv_py_pkgs/: README.md  pyproject.toml
ttkv_py_pkgs/src/ttkv/: __init__.py
ttkv_py_pkgs/tests/: test_ttkv.py
ttkv_rs/: Cargo.toml  flake.nix
ttkv_rs/src/: lib.rs
ttkv_rs_trait/: .gitignore  Cargo.toml
ttkv_rs_trait/src/: lib.rs
ttkv_sc/: .gitignore  build.sbt  flake.nix
ttkv_sc/src/main/scala/ttkv/: TTKV.scala
ttkv_sc/src/test/scala/ttkv/: TTKVSpec.scala
