cabal-version: 3.6
name: ttkv
version: 0.1.1.0
license: MIT
author: Graham Enos
maintainer: graham.enos@gmail.com
category: Data
build-type: Simple

library
  ghc-options:
    -Wall
    -Wextra
    -O2

  exposed-modules: TTKV
  hs-source-dirs: src
  default-language: GHC2024
  build-depends:
    base ^>=4.22.0.0,
    clock ^>=0.8.4,
    containers ^>=0.8,

test-suite ttkv-test
  ghc-options:
    -Wall
    -Wextra
    -O2

  type: exitcode-stdio-1.0
  hs-source-dirs: test
  default-language: GHC2024
  main-is: Main.hs
  build-depends:
    base ^>=4.22.0.0,
    containers ^>=0.8,
    hedgehog ^>= 1.7,
    ttkv,
